Skeleton for SMTLIB now works

--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -3,6 +3,8 @@ persistent=no
 disable=missing-module-docstring,
 	missing-class-docstring,
 	missing-function-docstring,
+	consider-using-f-string,
+	no-else-return,
 	too-few-public-methods
 
 [REPORTS]
