Add VCG and a trivial VC to test

--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -13,4 +13,4 @@ reports=yes
 
 [BASIC]
 class-rgx=([A-Z]+|[A-Z][a-z]+)(_[A-Z]+|[A-Z][a-z])*
-good-names=i,j,k,c,f,fd,ok
+good-names=i,j,k,c,f,fd,ok,vc
