Add support for floor division
Also run CVC5 to sanity check the generated SMTLIB is
without errors

--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -5,7 +5,8 @@ disable=missing-module-docstring,
 	missing-function-docstring,
 	consider-using-f-string,
 	no-else-return,
-	too-few-public-methods
+	too-few-public-methods,
+	too-many-instance-attributes
 
 [REPORTS]
 output-format=text
