--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -16,6 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: supplypike/setup-bin@v3
+      with:
+        uri: 'https://github.com/cvc5/cvc5/releases/download/cvc5-1.0.5/cvc5-Linux'
+	name: 'cvc5'
+	version: '1.0.5'
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
