Add support for string things

--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -6,7 +6,9 @@ disable=missing-module-docstring,
 	consider-using-f-string,
 	no-else-return,
 	too-few-public-methods,
-	too-many-instance-attributes
+	too-many-instance-attributes,
+	too-many-lines,
+	too-many-public-methods
 
 [REPORTS]
 output-format=text
