Add support for xor, and string and sequence concat

--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -8,7 +8,8 @@ disable=missing-module-docstring,
 	too-few-public-methods,
 	too-many-instance-attributes,
 	too-many-lines,
-	too-many-public-methods
+	too-many-public-methods,
+	too-many-return-statements
 
 [REPORTS]
 output-format=text
