Reorganise layout a bit

--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -9,7 +9,8 @@ disable=missing-module-docstring,
 	too-many-instance-attributes,
 	too-many-lines,
 	too-many-public-methods,
-	too-many-return-statements
+	too-many-return-statements,
+	duplicate-code
 
 [REPORTS]
 output-format=text
@@ -17,4 +18,4 @@ reports=yes
 
 [BASIC]
 class-rgx=([A-Z]+|[A-Z][a-z]+)(_[A-Z]+|[A-Z][a-z])*
-good-names=i,j,k,c,f,fd,ok,vc
+good-names=i,j,k,c,f,fd,ok,vc,rv
