--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -10,6 +10,7 @@ disable=missing-module-docstring,
 	too-many-lines,
 	too-many-public-methods,
 	too-many-return-statements,
+	too-many-branches,
 	duplicate-code
 
 [REPORTS]
