--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: PyVCG CI (Test, Python 3.11)
+name: PyVCG CI Test
 
 on:
   push:
@@ -11,9 +11,10 @@ permissions:
 
 jobs:
   build:
-
+    strategy:
+      matrix:
+        py-version: ["3.8", "3.9", "3.10", "3.11"]
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - uses: supplypike/setup-bin@v3
@@ -21,10 +22,10 @@ jobs:
           uri: 'https://github.com/cvc5/cvc5/releases/download/cvc5-1.0.8/cvc5-Linux'
           name: 'cvc5'
           version: '1.0.8'
-      - name: Set up Python 3.11
+      - name: Set up Python ${{ matrix.py-version }}
         uses: actions/setup-python@v3
         with:
-          python-version: "3.11"
+          python-version: ${{ matrix.py-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
