First attempt to support driving CVC5 via SMTLIB2

--- a/pylint3.cfg
+++ b/pylint3.cfg
@@ -11,7 +11,8 @@ disable=missing-module-docstring,
 	too-many-public-methods,
 	too-many-return-statements,
 	too-many-branches,
-	duplicate-code
+	duplicate-code,
+	inconsistent-return-statements
 
 [REPORTS]
 output-format=text
@@ -19,4 +20,4 @@ reports=yes
 
 [BASIC]
 class-rgx=([A-Z]+|[A-Z][a-z]+)(_[A-Z]+|[A-Z][a-z])*
-good-names=i,j,k,c,f,fd,ok,vc,rv
+good-names=i,j,k,c,f,fd,ok,vc,rv,cc,nc,ct,nt
